# tristim

./: .gitignore  50-spyder.rules  50-tristim.rules  Cargo.toml  PROTOCOL-NOTES.md  README.md
.github/workflows/: ci.yml
measurements/2026-05-19/: calibrate.py  lu28r55s-dp4.csv  lu28r55s-dp6.csv  lu28r55s-dp9.csv  s24c230-dp7.csv  s24c230-dp7_2.csv  s24c230-dp8.csv  s24c230-dp8_2.csv  xv273k-dp1.csv
measurements/2026-05-19/baseline-modetest/: navi21-crtcs.txt  vega20-crtcs.txt
measurements/2026-05-19/round1/: lu28r55s-dp9.csv  s24c230-dp7.csv
measurements/2026-05-19/round2/: lu28r55s-dp4_3.csv  lu28r55s-dp6_3.csv  lu28r55s-dp9_3.csv  s24c230-dp7_3.csv  s24c230-dp8_3.csv
packaging/: README.md
packaging/aur/: PKGBUILD
spyder-cli/: Cargo.toml
spyder-cli/src/: analyze.rs  main.rs
spyder-display/: Cargo.toml
spyder-display/examples/: show_patch.rs
spyder-display/src/: color_mgmt.rs  lib.rs  pq.rs
spyder-driver/: Cargo.toml
spyder-driver/examples/: measure.rs  probe.rs
spyder-driver/src/: device.rs  lib.rs  measurement.rs  protocol.rs
tristim-analyze/: Cargo.toml
tristim-analyze/src/: lib.rs
tristim-capture/: Cargo.toml
tristim-capture/src/: export.rs  lib.rs
tristim-cli/: Cargo.toml
tristim-cli/src/: analyze.rs  main.rs
tristim-color/: Cargo.toml
tristim-color/src/: ictcp.rs  lib.rs  metrics.rs  transfer.rs
tristim-display/: Cargo.toml  README.md
tristim-display/examples/: show_hdr_patch.rs  show_patch.rs
tristim-display/src/: color_mgmt.rs  format.rs  lib.rs  mode.rs
tristim-driver/: Cargo.toml  README.md
tristim-driver/examples/: dump_calibrations.rs  measure.rs  probe.rs
tristim-driver/src/: colorimeter.rs  confidence.rs  device.rs  lib.rs  measurement.rs  protocol.rs  sample.rs
tristim-driver/src/i1d3/: adaptive.rs  calmat.rs  eeprom.rs  mod.rs  observer.rs  unlock.rs
tristim-driver/src/spyder/: measurement.rs  mod.rs  protocol.rs  spyderx.rs  transport.rs
tristim-gather/: Cargo.toml
tristim-gather/src/: format.rs  gamut.rs  lib.rs  sequence.rs  time.rs
tristim-gui/: Cargo.toml  README.md  dev.tristim.gui.desktop
tristim-gui/fixtures/: reference-capture.json
tristim-gui/src/: app.rs  chart.rs  chroma_field.wgsl  lib.rs  luminance.rs  main.rs  plot.rs  setup.rs  space3d.rs
