[workspace]
resolver = "2"
members = [
    "tristim-driver",
    "tristim-display",
    "tristim-capture",
    "tristim-color",
    "tristim-analyze",
    "tristim-gather",
    "tristim-cli",
]
# tristim-gui depends on damascene via a local path dep, which CI can't fetch.
# Excluding it keeps it in the repo as a standalone crate (its own Cargo.lock,
# built with `cd tristim-gui && cargo run`) without dragging damascene + the GPU
# stack into the workspace lockfile that CI resolves. See tristim-gui/README.md.
exclude = ["tristim-gui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/computer-whisperer/tristim"

[workspace.dependencies]
rusb = "0.9"
rand = "0.8"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
