[workspace]
resolver = "2"
members = [
    "tristim-driver",
    "tristim-display",
    "tristim-capture",
    "tristim-color",
    "tristim-analyze",
    "tristim-gather",
    "tristim-cli",
    "tristim-gui",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/computer-whisperer/tristim"

[workspace.dependencies]
rusb = "0.9"
rand = "0.8"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
