[package]
name = "spyder-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Orchestrator CLI for spyder-driver + spyder-display: probe / measure / sweep / characterize."

[[bin]]
name = "spyder"
path = "src/main.rs"

[dependencies]
spyder-driver = { path = "../spyder-driver" }
spyder-display = { path = "../spyder-display" }
