[package]
name = "tristim-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Gatherer CLI for tristim: drive a colorimeter + Wayland patch surface to capture how a compositor reproduces color, into a tristim-capture JSON file."

[[bin]]
name = "tristim"
path = "src/main.rs"

[dependencies]
tristim-driver = { path = "../tristim-driver" }
tristim-display = { path = "../tristim-display" }
tristim-capture = { path = "../tristim-capture" }
tristim-analyze = { path = "../tristim-analyze" }
tristim-gather = { path = "../tristim-gather" }
