[package]
name = "tristim-color"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Color science for interpreting tristim captures: standard color spaces, transfer functions, RGB<->XYZ matrices, and difference metrics."

[dependencies]
