[package]
name = "tristim-display"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Wayland layer-shell client for displaying known RGB test patches on a chosen output, paired with tristim-driver for colorimeter measurement."

[lib]
path = "src/lib.rs"

[dependencies]
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
# Staging color-management bindings (wp_color_management_v1) — used
# by the HDR-mode patch path to declare PQ + BT.2020 encoding so the
# compositor scans buffers out without color transforms. SCTK doesn't
# ship a high-level wrapper; we drive the protocol directly.
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
thiserror.workspace = true
# fp16 encoding for HDR patches (f32 → IEEE 754 binary16).
half = "2"
