[package]
name = "tristim-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Clean-room Rust driver for Datacolor Spyder colorimeters (Spyder 2024 / SpyderX2), with a device-generic Colorimeter trait"
readme = "README.md"
keywords = ["colorimeter", "spyder", "datacolor", "color", "calibration"]
categories = ["hardware-support", "science"]

[dependencies]
rusb.workspace = true
rand.workspace = true
thiserror.workspace = true
