[package]
name = "tristim-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Independent Rust drivers for display colorimeters (Datacolor Spyder family, X-Rite i1Display Pro family), behind a device-generic Colorimeter trait"
readme = "README.md"
keywords = ["colorimeter", "spyder", "i1display", "color", "calibration"]
categories = ["hardware-support", "science"]

[dependencies]
rusb.workspace = true
rand.workspace = true
thiserror.workspace = true
