[package]
name = "tristim-gui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/computer-whisperer/tristim"
description = "Damascene-based presenter for tristim captures: load a capture, analyze it, and visualize where a compositor reproduces color faithfully vs. where it drifts."
# Excluded from the tristim workspace (see ../Cargo.toml): the damascene path deps
# below are not fetchable in CI, so this crate carries its own Cargo.lock and is
# built independently with `cargo run` from this directory.

[[bin]]
name = "tristim-gui"
path = "src/main.rs"

[dependencies]
# Presenter UI stack. Local path deps to a sibling damascene checkout; pin to the
# git version (0.4.x) for the explicit color-mode support.
damascene-core = { path = "../../damascene/damascene.main/crates/damascene-core" }
damascene-winit-wgpu = { path = "../../damascene/damascene.main/crates/damascene-winit-wgpu" }

# tristim backend libraries (members of the main workspace, reached by path).
tristim-capture = { path = "../tristim-capture" }
tristim-analyze = { path = "../tristim-analyze" }
tristim-color = { path = "../tristim-color" }
# Gather stack: run a capture in-process from the GUI. tristim-display is the
# Wayland patch surface + output enumeration; tristim-gather is the shared
# capture loop (also driven by the CLI). Both are damascene-free workspace members.
tristim-display = { path = "../tristim-display" }
tristim-gather = { path = "../tristim-gather" }

# Native open-file dialog (for loading additional captures). The xdg-portal
# backend runs out-of-process over D-Bus — Wayland-native and safe to call off
# the main thread — so we avoid linking GTK into the binary.
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
