[package]
name = "tristim-gui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/computer-whisperer/tristim"
description = "Damascene-based presenter for tristim captures: load a capture, analyze it, and visualize where a compositor reproduces color faithfully vs. where it drifts."
default-run = "tristim-gui"
# Excluded from the tristim workspace (see ../Cargo.toml) to keep the heavy
# damascene + GPU/winit stack out of the lockfile CI resolves; this crate carries
# its own Cargo.lock and is built independently with `cargo run` from this directory.

[[bin]]
name = "tristim-gui"
path = "src/main.rs"

[dependencies]
# Presenter UI stack, from crates.io. 0.4.x carries the 3D scene support and
# explicit wide-gamut color-mode handling the GUI relies on.
damascene-core = "0.4.1"
damascene-winit-wgpu = "0.4.1"

# tristim backend libraries (members of the main workspace, reached by path).
tristim-capture = { path = "../tristim-capture" }
tristim-analyze = { path = "../tristim-analyze" }
tristim-color = { path = "../tristim-color" }
# Gather stack: run a capture in-process from the GUI. tristim-display is the
# Wayland patch surface + output enumeration; tristim-gather is the shared
# capture loop (also driven by the CLI). Both are damascene-free workspace members.
tristim-display = { path = "../tristim-display" }
tristim-gather = { path = "../tristim-gather" }

# Native open-file dialog (for loading additional captures). The xdg-portal
# backend runs out-of-process over D-Bus — Wayland-native and safe to call off
# the main thread — so we avoid linking GTK into the binary.
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
